Fixes spacing at medium screen sizes

--- a/_includes/beatrice/03-organisms/08-split-header/_split-header.scss
+++ b/_includes/beatrice/03-organisms/08-split-header/_split-header.scss
@@ -11,10 +11,6 @@
   }
 }
 
-.split-header-content:first-child {
-  margin-top: 1rem;
-}
-
 /**
  * Makes it possible to have the h1 to break outside 
  * content-width “line length” or max width, which is
@@ -32,6 +28,7 @@
 }
 
 .split-header-content {
+  padding-top: calc(var(--top-bar-nav-height-desktop, 64px) + 1rem);
   width: 100%;
 }
 
@@ -42,6 +39,9 @@
     top: 0;
     right: 0;
     height: 100%;
+    width: 30%;
+  }
+  @media (min-width: $bp--xlarge) {
     width: 50%;
   }
 }
